--- a/new.css
+++ b/new.css
@@ -53,4 +53,11 @@
   width: 100%;
   height: 100%;
 }
+
+@media only screen and (max-width: 449px) {
+  .button {
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+}
 /*# sourceMappingURL=new.css.map */
